--- a/index.html
+++ b/index.html
@@ -25,6 +25,34 @@
 	<title>another cool title here</title>
 </head>
 <body>
+	<div class="top-bar">
+  <div class="top-bar-title">
+    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+      <button class="menu-icon dark" type="button" data-toggle></button>
+    </span>
+    <strong>DESIGN FINISH</strong>
+  </div>
+  <div id="responsive-menu">
+    <div class="top-bar-right">
+      <ul class="dropdown menu" data-dropdown-menu>
+        <li><a href="#">Two</a></li>
+        <li><a href="#">Three</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-right">
+      <ul class="menu">
+        <li><input type="search" placeholder="Search"></li>
+        <li><button type="button" class="button">Search</button></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
 	<section class="cd-title">
 		<h1>Animated Headlines</h1>
 	</section>
