linked foundation resources

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+
+	<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css"> <!--Foundation resource-->
+
+
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 
 	<title>another cool title here</title>
@@ -158,6 +162,9 @@
 		</h1>
 	</section> <!-- cd-intro -->
 <script src="js/jquery-2.1.1.js"></script>
+<script src="/foundation-6.2.1-complete/js/vendor/foundation.js"></script> <!--Foundation JS resource-->
+
+
 <script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
