--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en" class="no-js">
+
 <head>
 
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ProjectTitle</title>
-  <meta name="author" content="Put yours here">
-  <meta name="description" content="description here">
-  <meta name="keywords" content="keywords,here">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Design Finish</title>
+	<meta name="author" content="Put yours here">
+	<meta name="description" content="description here">
+	<meta name="keywords" content="keywords,here">
 
 
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
@@ -18,153 +19,203 @@
 
 
 
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/reset.css">
+	<!-- CSS reset -->
+	<link rel="stylesheet" href="css/style.css">
+	<!-- Resource style -->
 
-	<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css"> <!--Foundation resource-->
 
 
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<link rel="stylesheet" type="text/css" href="/LineMenuStyles-master/css/component.css" />
+	<!--Menu resource-->
+	<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
+	<!--Caption Hover resource-->
+
+
+
+
+
+	<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
+	<!--Foundation resource-->
+
+
+
+	<script src="js/modernizr.js"></script>
+	<!-- Modernizr -->
 
 	<title>another cool title here</title>
 </head>
+
 <body>
-	<div class="top-bar">
-  <div class="top-bar-title">
-    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-      <button class="menu-icon dark" type="button" data-toggle></button>
-    </span>
-    <strong>DESIGN FINISH</strong>
-  </div>
-  <div id="responsive-menu">
-    <div class="top-bar-right">
-      <ul class="dropdown menu" data-dropdown-menu>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-      </ul>
-    </div>
-    <div class="top-bar-right">
-      <ul class="menu">
-        <li><input type="search" placeholder="Search"></li>
-        <li><button type="button" class="button">Search</button></li>
-      </ul>
-    </div>
-  </div>
-</div>
+	<div class="row">
+		<div class="column small-centered small-8">
+			<section class="section section--menu" id="Ferdinand">
+
+				<span class="link-copy"></span>
+				<nav class="menu menu--ferdinand">
+					<ul class="menu__list  text-center">
+						<li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">About</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Potifolio</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Members</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Blog</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+					</ul>
+				</nav>
+			</section>
+		</div>
+	</div>
 
 
 
-
-
-
-	<section class="cd-title">
-		<h1>Animated Headlines</h1>
-	</section>
-
-	<section class="cd-intro">
-		<h1 class="cd-headline rotate-1">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
+	<div class="row">
 	<section class="cd-intro">
 		<h1 class="cd-headline letters type">
-			<span>My favourite food is</span>
+			<span>We </span>
 			<span class="cd-words-wrapper waiting">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
+				<b class="is-visible"> design elegancy</b>
+				<b>develop web & mobile</b>
+				<b>craft best layouts</b>
 			</span>
 		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline letters rotate-2">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline loading-bar">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline slide">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline clip is-full-width">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline zoom">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline letters rotate-3">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline letters scale">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-	<section class="cd-intro">
-		<h1 class="cd-headline push">
-			<span>My favourite food is</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
-			</span>
-		</h1>
-	</section> <!-- cd-intro -->
-<script src="js/jquery-2.1.1.js"></script>
-<script src="/foundation-6.2.1-complete/js/vendor/foundation.js"></script> <!--Foundation JS resource-->
+	</section>
+	</div>
+	<!--cd-intro -->
+
+	<!--Caption Hover potifolio-->
+	<div class="row">
+	<ul class="grid cs-style-3">
+		<li>
+			<figure>
+				<img src="/img/port1.jpg" alt="img04">
+				<figcaption>
+					<h3>Settings</h3>
+					<span>Jacob Cummings</span>
+					<a href="#">Take a look</a>
+				</figcaption>
+			</figure>
+		</li>
+		<li>
+			<figure>
+				<img src="/img/port1.jpg" alt="img04">
+				<figcaption>
+					<h3>Settings</h3>
+					<span>Jacob Cummings</span>
+					<a href="#">Take a look</a>
+				</figcaption>
+			</figure>
+		</li>
+		<li>
+			<figure>
+				<img src="/img/port1.jpg" alt="img04">
+				<figcaption>
+					<h3>Settings</h3>
+					<span>Jacob Cummings</span>
+					<a href="#">Take a look</a>
+				</figcaption>
+			</figure>
+		</li>
+
+	</ul></div>
 
 
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+	<!--Start form here--->
+	 <div class="row">
+        <div class="columns small-12 medium-8 large-6 small-centered large-centered">
+          <form action="https://formspree.io/victsomie@yahoo.com" method="POST">
+            <div class="medium-12 columns">
+              <label>
+                <h1>Your Name</h1>
+                <input type="text" name="name" placeholder="What's your name">
+              </label>
+            </div>
+            <div class="medium-12 columns">
+              <label>
+                <h1>E-mail</h1>
+                <input type="text" name="email" placeholder="Let me know your mail">
+              </label>
+            </div>
+
+            <div class="medium-12 columns">
+              <label>
+                <h1>Leave comments</h1>
+                <textarea placeholder="Tell me something" name="comments" rows="3"></textarea>
+              </label>
+
+            </div>
+
+            <input type="submit" value="Send">
+
+            <button class="close-button" data-close aria-label="Close reveal" type="button">
+              <span aria-hidden="true">&times;</span>
+            </button>
+
+          </form>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<script src="js/jquery-2.1.1.js"></script>
+
+	<script src="/LineMenuStyles-master/js/classie.js"></script>
+	<script src="/LineMenuStyles-master/js/clipboard.min.js"></script>
+	<script>
+		(function() {
+			[].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
+				var menuItems = menu.querySelectorAll('.menu__link'),
+					setCurrent = function(ev) {
+						ev.preventDefault();
+
+						var item = ev.target.parentNode; // li
+
+						// return if already current
+						if (classie.has(item, 'menu__item--current')) {
+							return false;
+						}
+						// remove current
+						classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
+						// set current
+						classie.add(item, 'menu__item--current');
+					};
+
+				[].slice.call(menuItems).forEach(function(el) {
+					el.addEventListener('click', setCurrent);
+				});
+			});
+
+			[].slice.call(document.querySelectorAll('.link-copy')).forEach(function(link) {
+				link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
+				new Clipboard(link);
+				link.addEventListener('click', function() {
+					classie.add(link, 'link-copy--animate');
+					setTimeout(function() {
+						classie.remove(link, 'link-copy--animate');
+					}, 300);
+				});
+			});
+		})(window);
+	</script>
+
+
+	<script src="/foundation-6.2.1-complete/js/vendor/foundation.js"></script>
+	<!--Menu Js resource-->
+	<script src="/CaptionHoverEffects/js/toucheffects.js"></script>
+	<!--Caption Hover resource-->
+
+
+	<script src="js/main.js"></script>
+	<!-- Resource jQuery -->
 </body>
+
 </html>
