linked and added more styling

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 
 
-	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/rest.css">
 	<!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css">
-	<!-- Resource style -->
+
 
 
 
@@ -30,15 +29,12 @@
 	<!--Menu resource-->
 	<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
 	<!--Caption Hover resource-->
-
-
-
+	<link rel="stylesheet" href="css/style.css">
+	<!-- Resource style -->
 
 
 	<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
 	<!--Foundation resource-->
-
-
 
 	<script src="js/modernizr.js"></script>
 	<!-- Modernizr -->
@@ -65,8 +61,6 @@
 			</section>
 		</div>
 	</div>
-
-
 
 	<div class="row">
 	<section class="cd-intro">
@@ -153,17 +147,6 @@
           </form>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
 	<script src="js/jquery-2.1.1.js"></script>
