added styles to potifolio

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 	<!--Menu resource-->
 	<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
 	<!--Caption Hover resource-->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/styl.css">
 	<!-- Resource style -->
 
 
 	<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
 	<!--Foundation resource-->
+	<link rel="stylesheet" href="css/style.css">
 
 	<script src="js/modernizr.js"></script>
 	<!-- Modernizr -->
@@ -43,8 +44,8 @@
 </head>
 
 <body>
-	<div class="row">
-		<div class="column small-centered small-8">
+	<div class="">
+		<div class="column small-centered small-12 text-center">
 			<section class="section section--menu" id="Ferdinand">
 
 				<span class="link-copy"></span>
@@ -62,23 +63,33 @@
 		</div>
 	</div>
 
-	<div class="row">
-	<section class="cd-intro">
-		<h1 class="cd-headline letters type">
-			<span>We </span>
+	<div class="">
+	<section class="">
+		<h2 class="cd-headline rotate text-center">
+			<span>We</span>
 			<span class="cd-words-wrapper waiting">
 				<b class="is-visible"> design elegancy</b>
 				<b>develop web & mobile</b>
 				<b>craft best layouts</b>
 			</span>
-		</h1>
+		</h2>
 	</section>
 	</div>
 	<!--cd-intro -->
 
 	<!--Caption Hover potifolio-->
-	<div class="row">
+	<div class="ro">
 	<ul class="grid cs-style-3">
+		<li>
+			<figure>
+				<img src="/img/port1.jpg" alt="img04">
+				<figcaption>
+					<h3>Settings</h3>
+					<span>Jacob Cummings</span>
+					<a href="#">Take a look</a>
+				</figcaption>
+			</figure>
+		</li>
 		<li>
 			<figure>
 				<img src="/img/port1.jpg" alt="img04">
