Added Shape Hover Effects for members design

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 		</div>
 	</div>
 
-	<div class="">
+	<div class="container">
 	<section class="">
-		<h2 class="cd-headline rotate text-center">
-			<span>We</span>
+		<h2 class="cd-headline zoom loading-bar text-center">
+			<span>Sans Open Agencies</span><br>
 			<span class="cd-words-wrapper waiting">
-				<b class="is-visible"> design elegancy</b>
-				<b>develop web & mobile</b>
-				<b>craft best layouts</b>
+				<b class="is-visible"> Design elegancy</b>
+				<b>Develop web & mobile</b>
+				<b>Craft best layouts</b>
 			</span>
 		</h2>
 	</section>
@@ -78,7 +78,7 @@
 	<!--cd-intro -->
 
 	<!--Caption Hover potifolio-->
-	<div class="ro">
+	<div class="">
 	<ul class="grid cs-style-3">
 		<li>
 			<figure>
