added styling andn content

--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
 
 	<link rel="stylesheet" type="text/css" href="/LineMenuStyles-master/css/component.css" />
 	<!--Menu resource-->
-	<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
-	<!--Caption Hover resource-->
-	<link rel="stylesheet" href="css/styl.css">
-	<!-- Resource style -->
+
+
+
+
+	<link rel="stylesheet" href="/ShapeHoverEffectSVG/css/component.css">
+	<!-- Shape Effect hover -->
 
 
 	<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
 	<!--Foundation resource-->
 	<link rel="stylesheet" href="css/style.css">
 
+
+
+		<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
+	<!--Caption Hover resource-->
 	<script src="js/modernizr.js"></script>
 	<!-- Modernizr -->
 
@@ -64,8 +70,8 @@
 	</div>
 
 	<div class="container">
-	<section class="">
-		<h2 class="cd-headline zoom loading-bar text-center">
+		<section class="">
+			<h2 class="cd-headline zoom loading-bar text-center">
 			<span>Sans Open Agencies</span><br>
 			<span class="cd-words-wrapper waiting">
 				<b class="is-visible"> Design elegancy</b>
@@ -73,91 +79,141 @@
 				<b>Craft best layouts</b>
 			</span>
 		</h2>
-	</section>
+		</section>
 	</div>
 	<!--cd-intro -->
 
 	<!--Caption Hover potifolio-->
 	<div class="">
-	<ul class="grid cs-style-3">
-		<li>
-			<figure>
-				<img src="/img/port1.jpg" alt="img04">
-				<figcaption>
-					<h3>Settings</h3>
-					<span>Jacob Cummings</span>
-					<a href="#">Take a look</a>
-				</figcaption>
-			</figure>
-		</li>
-		<li>
-			<figure>
-				<img src="/img/port1.jpg" alt="img04">
-				<figcaption>
-					<h3>Settings</h3>
-					<span>Jacob Cummings</span>
-					<a href="#">Take a look</a>
-				</figcaption>
-			</figure>
-		</li>
-		<li>
-			<figure>
-				<img src="/img/port1.jpg" alt="img04">
-				<figcaption>
-					<h3>Settings</h3>
-					<span>Jacob Cummings</span>
-					<a href="#">Take a look</a>
-				</figcaption>
-			</figure>
-		</li>
-		<li>
-			<figure>
-				<img src="/img/port1.jpg" alt="img04">
-				<figcaption>
-					<h3>Settings</h3>
-					<span>Jacob Cummings</span>
-					<a href="#">Take a look</a>
-				</figcaption>
-			</figure>
-		</li>
+		<ul class="grid cs-style-3">
+			<li>
+				<figure>
+					<img src="/img/port1.jpg" alt="img04">
+					<figcaption>
+						<h3>Settings</h3>
+						<span>Jacob Cummings</span>
+						<a href="#">Take a look</a>
+					</figcaption>
+				</figure>
+			</li>
+			<li>
+				<figure>
+					<img src="/img/port1.jpg" alt="img04">
+					<figcaption>
+						<h3>Settings</h3>
+						<span>Jacob Cummings</span>
+						<a href="#">Take a look</a>
+					</figcaption>
+				</figure>
+			</li>
+			<li>
+				<figure>
+					<img src="/img/port1.jpg" alt="img04">
+					<figcaption>
+						<h3>Settings</h3>
+						<span>Jacob Cummings</span>
+						<a href="#">Take a look</a>
+					</figcaption>
+				</figure>
+			</li>
+			<li>
+				<figure>
+					<img src="/img/port1.jpg" alt="img04">
+					<figcaption>
+						<h3>Settings</h3>
+						<span>Jacob Cummings</span>
+						<a href="#">Take a look</a>
+					</figcaption>
+				</figure>
+			</li>
 
-	</ul></div>
+		</ul>
+	</div>
+
+	<section id="grid" class="grid clearfix">
+		<a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+			<figure>
+				<img src="/img/port1.jpg" />
+				<svg viewBox="0 0 180 320" preserveAspectRatio="none">
+					<path d="M 180,160 0,218 0,0 180,0 z" />
+				</svg>
+				<figcaption>
+					<h2>Crystalline</h2>
+					<p>Soko radicchio bunya nuts gram dulse.</p>
+					<button>View</button>
+				</figcaption>
+			</figure>
+		</a>
+		<a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+			<figure>
+				<img src="/img/port1.jpg" />
+				<svg viewBox="0 0 180 320" preserveAspectRatio="none">
+					<path d="M 180,160 0,218 0,0 180,0 z" />
+				</svg>
+				<figcaption>
+					<h2>Cacophony</h2>
+					<p>Two greens tigernut soybean radish.</p>
+					<button>View</button>
+				</figcaption>
+			</figure>
+		</a>
+		<a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+			<figure>
+				<img src="/img/port1.jpg" />
+				<svg viewBox="0 0 180 320" preserveAspectRatio="none">
+					<path d="M 180,160 0,218 0,0 180,0 z" />
+				</svg>
+				<figcaption>
+					<h2>Languid</h2>
+					<p>Beetroot water spinach okra water.</p>
+					<button>View</button>
+				</figcaption>
+			</figure>
+		</a>
+	</section>
+
+
+
+
+
+
+
 
 
 	<!--Start form here--->
-	 <div class="row">
-        <div class="columns small-12 medium-8 large-6 small-centered large-centered">
-          <form action="https://formspree.io/victsomie@yahoo.com" method="POST">
-            <div class="medium-12 columns">
-              <label>
-                <h1>Your Name</h1>
-                <input type="text" name="name" placeholder="What's your name">
-              </label>
-            </div>
-            <div class="medium-12 columns">
-              <label>
-                <h1>E-mail</h1>
-                <input type="text" name="email" placeholder="Let me know your mail">
-              </label>
-            </div>
+	<div class="row">
+		<div class="columns small-12 medium-8 large-6 small-centered large-centered">
+			<form action="https://formspree.io/victsomie@yahoo.com" method="POST">
+				<div class="medium-12 columns">
+					<label>
+						<h1>Your Name</h1>
+						<input type="text" name="name" placeholder="What's your name">
+					</label>
+				</div>
+				<div class="medium-12 columns">
+					<label>
+						<h1>E-mail</h1>
+						<input type="text" name="email" placeholder="Let me know your mail">
+					</label>
+				</div>
 
-            <div class="medium-12 columns">
-              <label>
-                <h1>Leave comments</h1>
-                <textarea placeholder="Tell me something" name="comments" rows="3"></textarea>
-              </label>
+				<div class="medium-12 columns">
+					<label>
+						<h1>Leave comments</h1>
+						<textarea placeholder="Tell me something" name="comments" rows="3"></textarea>
+					</label>
 
-            </div>
+				</div>
 
-            <input type="submit" value="Send">
+				<input type="submit" value="Send">
 
-            <button class="close-button" data-close aria-label="Close reveal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
+				<button class="close-button" data-close aria-label="Close reveal" type="button">
+					<span aria-hidden="true">&times;</span>
+				</button>
 
-          </form>
-        </div>
-      </div>
+			</form>
+		</div>
+	</div>
 
 
 	<script src="js/jquery-2.1.1.js"></script>
@@ -202,10 +258,54 @@
 	</script>
 
 
+	<script>
+		(function() {
+
+			function init() {
+				var speed = 250,
+					easing = mina.easeinout;
+
+				[].slice.call(document.querySelectorAll('#grid > a')).forEach(function(el) {
+					var s = Snap(el.querySelector('svg')),
+						path = s.select('path'),
+						pathConfig = {
+							from: path.attr('d'),
+							to: el.getAttribute('data-path-hover')
+						};
+
+					el.addEventListener('mouseenter', function() {
+						path.animate({
+							'path': pathConfig.to
+						}, speed, easing);
+					});
+
+					el.addEventListener('mouseleave', function() {
+						path.animate({
+							'path': pathConfig.from
+						}, speed, easing);
+					});
+				});
+			}
+
+			init();
+
+		})();
+	</script>
+
+
+
 	<script src="/foundation-6.2.1-complete/js/vendor/foundation.js"></script>
 	<!--Menu Js resource-->
 	<script src="/CaptionHoverEffects/js/toucheffects.js"></script>
 	<!--Caption Hover resource-->
+
+
+	<script src="/ShapeHoverEffectSVG/js/hovers.js"></script>
+	<!--Caption Hover resource-->
+
+
+
+
 
 
 	<script src="js/main.js"></script>
