added text input effects

--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
 	<link rel="stylesheet" href="css/rest.css">
 	<!-- CSS reset -->
 
-
-
+	<link rel="stylesheet" type="text/css" href="/TextInputEffects/css/set2.css" />
+	<!--Text input resources resource-->
 
 	<link rel="stylesheet" type="text/css" href="/LineMenuStyles-master/css/component.css" />
 	<!--Menu resource-->
-
-
-
 
 	<link rel="stylesheet" href="/ShapeHoverEffectSVG/css/component.css">
 	<!-- Shape Effect hover -->
