--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 	<link rel="stylesheet" href="css/rest.css">
 	<!-- CSS reset -->
 
-	<link rel="stylesheet" type="text/css" href="/TextInputEffects/css/set2.css" />
-	<!--Text input resources resource-->
+
 
 	<link rel="stylesheet" type="text/css" href="/LineMenuStyles-master/css/component.css" />
 	<!--Menu resource-->
@@ -32,14 +31,21 @@
 	<!-- Shape Effect hover -->
 
 
-	<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
-	<!--Foundation resource-->
+
 	<link rel="stylesheet" href="css/style.css">
 
 
 
 		<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
 	<!--Caption Hover resource-->
+
+
+		<link rel="stylesheet" type="text/css" href="/TextInputEffects/css/set2.css" />
+	<!--Text input resources resource-->
+
+		<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
+	<!--Foundation resource-->
+
 	<script src="js/modernizr.js"></script>
 	<!-- Modernizr -->
 
@@ -172,7 +178,27 @@
 
 
 
-
+			<section class="row">
+				<h2>Yoshiko</h2>
+				<span class="input input--yoshiko">
+					<input class="input__field input__field--yoshiko" type="text" id="input-10" />
+					<label class="input__label input__label--yoshiko" for="input-10">
+						<span class="input__label-content input__label-content--yoshiko" data-content="Bird's Color">Bird's Color</span>
+					</label>
+				</span>
+				<span class="input input--yoshiko">
+					<input class="input__field input__field--yoshiko" type="text" id="input-11" />
+					<label class="input__label input__label--yoshiko" for="input-11">
+						<span class="input__label-content input__label-content--yoshiko" data-content="Wing Span">Wing Span</span>
+					</label>
+				</span>
+				<span class="input input--yoshiko">
+					<input class="input__field input__field--yoshiko" type="text" id="input-12" />
+					<label class="input__label input__label--yoshiko" for="input-12">
+						<span class="input__label-content input__label-content--yoshiko" data-content="Beak Length">Beak Length</span>
+					</label>
+				</span>
+			</section>
 
 
 
@@ -289,6 +315,47 @@
 		})();
 	</script>
 
+
+
+	<!--=====input effects resources======-->
+
+
+			<script>
+			(function() {
+				// trim polyfill : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/Trim
+				if (!String.prototype.trim) {
+					(function() {
+						// Make sure we trim BOM and NBSP
+						var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
+						String.prototype.trim = function() {
+							return this.replace(rtrim, '');
+						};
+					})();
+				}
+
+				[].slice.call( document.querySelectorAll( 'input.input__field' ) ).forEach( function( inputEl ) {
+					// in case the input is already filled..
+					if( inputEl.value.trim() !== '' ) {
+						classie.add( inputEl.parentNode, 'input--filled' );
+					}
+
+					// events:
+					inputEl.addEventListener( 'focus', onInputFocus );
+					inputEl.addEventListener( 'blur', onInputBlur );
+				} );
+
+				function onInputFocus( ev ) {
+					classie.add( ev.target.parentNode, 'input--filled' );
+				}
+
+				function onInputBlur( ev ) {
+					if( ev.target.value.trim() === '' ) {
+						classie.remove( ev.target.parentNode, 'input--filled' );
+					}
+				}
+			})();
+		</script>
+	<!--=====end input effects resources======-->
 
 
 	<script src="/foundation-6.2.1-complete/js/vendor/foundation.js"></script>
