reordered reset.css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 
 
-	<link rel="stylesheet" href="css/rest.css">
-	<!-- CSS reset -->
+
 
 
 
@@ -34,8 +33,6 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-
-
 		<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
 	<!--Caption Hover resource-->
 
@@ -43,8 +40,14 @@
 		<link rel="stylesheet" type="text/css" href="/TextInputEffects/css/set2.css" />
 	<!--Text input resources resource-->
 
+			<link rel="stylesheet" href="css/reset.css">
+	<!-- CSS reset -->
+
 		<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
 	<!--Foundation resource-->
+
+
+
 
 	<script src="js/modernizr.js"></script>
 	<!-- Modernizr -->
@@ -180,7 +183,7 @@
 
 			<section class="row">
 				<h2>Yoshiko</h2>
-				<span class="input input--yoshiko">
+				<span class="input input--yoshiko  small-12 columns">
 					<input class="input__field input__field--yoshiko" type="text" id="input-10" />
 					<label class="input__label input__label--yoshiko" for="input-10">
 						<span class="input__label-content input__label-content--yoshiko" data-content="Bird's Color">Bird's Color</span>
@@ -243,6 +246,15 @@
 
 	<script src="/LineMenuStyles-master/js/classie.js"></script>
 	<script src="/LineMenuStyles-master/js/clipboard.min.js"></script>
+
+
+	<script src="/TextInputEffects/js/classie.js"></script><!---========Text Input classie js resource-->
+
+
+
+
+
+
 	<script>
 		(function() {
 			[].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
