added and modified shape hover files

--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
 	<link rel="stylesheet" type="text/css" href="/LineMenuStyles-master/css/component.css" />
 	<!--Menu resource-->
 
-	<link rel="stylesheet" href="/ShapeHoverEffectSVG/css/component.css">
-	<!-- Shape Effect hover -->
+	
 
 
 
 	<link rel="stylesheet" href="css/style.css">
 
-		<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
+		<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/componen.css" />
 	<!--Caption Hover resource-->
 
 
@@ -45,7 +44,9 @@
 
 		<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
 	<!--Foundation resource-->
-
+<link rel="stylesheet" href="/ShapeHoverEffectSVG/css/componen.css">
+<link rel="stylesheet" href="/css/modified.css">
+	<!-- Shape Effect hover -->
 
 
 
@@ -135,7 +136,7 @@
 
 		</ul>
 	</div>
-
+<div class="row">
 	<section id="grid" class="grid clearfix">
 		<a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
 			<figure>
@@ -177,7 +178,7 @@
 			</figure>
 		</a>
 	</section>
-
+	</div>
 
 
 
