--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-		<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/componen.css" />
+		<link rel="stylesheet" type="text/css" href="/CaptionHoverEffects/css/component.css" />
 	<!--Caption Hover resource-->
 
 
@@ -44,7 +44,7 @@
 
 		<link rel="stylesheet" href="/foundation-6.2.1-complete/css/foundation.css">
 	<!--Foundation resource-->
-<link rel="stylesheet" href="/ShapeHoverEffectSVG/css/componen.css">
+<link rel="stylesheet" href="/ShapeHoverEffectSVG/css/component.css">
 <link rel="stylesheet" href="/css/modified.css">
 	<!-- Shape Effect hover -->
 
@@ -183,9 +183,10 @@
 
 
 			<section class="row">
+                <form action="https://formspree.io/victsomie@yahoo.com" method="POST">
 				<h2>Yoshiko</h2>
 				<span class="input input--yoshiko  small-12 columns">
-					<input class="input__field input__field--yoshiko" type="text" id="input-10" />
+					<input class="input__field input__field--yoshiko" type="text" id="input-10" required>
 					<label class="input__label input__label--yoshiko" for="input-10">
 						<span class="input__label-content input__label-content--yoshiko" data-content="Bird's Color">Bird's Color</span>
 					</label>
@@ -201,7 +202,11 @@
 					<label class="input__label input__label--yoshiko" for="input-12">
 						<span class="input__label-content input__label-content--yoshiko" data-content="Beak Length">Beak Length</span>
 					</label>
+				</span>				
+                    <span class="input input--yoshiko">
+					<input class="input__field input__field--yoshiko" type="submit" id="input-12" >
 				</span>
+                </form>
 			</section>
 
 
@@ -214,13 +219,13 @@
 				<div class="medium-12 columns">
 					<label>
 						<h1>Your Name</h1>
-						<input type="text" name="name" placeholder="What's your name">
+						<input type="text" name="name" placeholder="What's your name" required>
 					</label>
 				</div>
 				<div class="medium-12 columns">
 					<label>
 						<h1>E-mail</h1>
-						<input type="text" name="email" placeholder="Let me know your mail">
+						<input type="text" name="email" placeholder="Let me know your mail" required>
 					</label>
 				</div>
 
